add color button, connect to js

--- a/index.html
+++ b/index.html
@@ -13,15 +13,30 @@
 
     <link rel="stylesheet" href="style.css" />
 
-    <title>My Project</title>
+    <title>Name Tag Project</title>
 </head>
 
 <body>
     <header>
-        <h1>My Project</h1>
+        <h1>Name Tag Project</h1>
     </header>
 
     <main>
+        <p>Name
+        <input id="name-input">
+        <button id="update-button">Update</button>
+        </p>
+        <p>Favorite color
+        <input id="color-input">  
+        <button id="color-button">Share color</button>  
+        </p>
+
+        <div id="nametag" class="nametag">
+            <p class="greeting">Hello</p>
+            <p class ="introduction">my name is</p>
+            <p id ="name-display" class ="name">Name</p>
+        </div>
+
 
     </main>
 
